main/default/objects/ICB__c/fields/Product_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Manger Assigned to ICB</description>
    <inlineHelpText>Product Manger Assigned to ICB</inlineHelpText>
    <label>Product Manager.</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ICBs</relationshipName>
    <type>Lookup</type>
</CustomField>