main/default/objects/ICB__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>The review date for this ICB</description>
    <inlineHelpText>Please enter the date a meeting/review was held for this ICB</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>