main/default/objects/ICB__c/fields/Selected_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Selected_Vendor__c</fullName>
    <description>Vendor selected to calculate Off-Net Quoting solution</description>
    <inlineHelpText>Vendor selected to calculate Off-Net Quoting solution</inlineHelpText>
    <label>Selected Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>Aliant</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>Beanfield</fullName>
            </value>
            <value>
                <fullName>Bell Canada</fullName>
            </value>
            <value>
                <fullName>Big Pipe</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>CLICK</fullName>
            </value>
            <value>
                <fullName>CLINK</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Consolidated (Enventis)</fullName>
            </value>
            <value>
                <fullName>Consolidated (Surewest)</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>Earthlink</fullName>
            </value>
            <value>
                <fullName>Eastlink</fullName>
            </value>
            <value>
                <fullName>ENMAX</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Fairpoint/Ellensburg</fullName>
            </value>
            <value>
                <fullName>Fatbeam</fullName>
            </value>
            <value>
                <fullName>Fibrenoire</fullName>
            </value>
            <value>
                <fullName>First Digital</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>GCI</fullName>
            </value>
            <value>
                <fullName>Global Capacity</fullName>
            </value>
            <value>
                <fullName>Interlinx/Toanquint Data Center</fullName>
            </value>
            <value>
                <fullName>Legacy TW Cable</fullName>
            </value>
            <value>
                <fullName>Legacy TWTC</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>LS Network</fullName>
            </value>
            <value>
                <fullName>Lumos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>