main/default/objects/ICB__c/fields/Service_Agreement_Change__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field</description>
    <inlineHelpText>To be completed by the Product Manager if the approved ICB requires a change to the Ts and Cs and/or SLA.</inlineHelpText>
    <label>Service Agreement Change</label>
    <type>Checkbox</type>
</CustomField>