main/default/objects/ICB__c/fields/Service_Agreement_Change_VerbiageOffrMgt__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Change_VerbiageOffrMgt__c</fullName>
    <description>Formula field used in an email template to Offer Management.</description>
    <formula>IF( (Service_Agreement_Change__c  ||  Legal_Review_Required_for_Pricing__c )   , &quot;A Service Agreement/SLA change has been requested.  If a change is required to the CPQ printed agreement, please create a task and assign it to Angie Johnson. Select Sales Enablement - ICB as the task type and subject.  You may be able to handle this request via a PDF without involving Sales Enablement.&quot;, &quot;.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System Maintained Field:  verbiage used in an email to Offer Management.</inlineHelpText>
    <label>Service Agreement Change VerbiageOffrMgt</label>
    <type>Text</type>
</CustomField>