main/default/objects/ICB__c/fields/Service_Agreement_Change_VerbiageProdMgr__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Change_VerbiageProdMgr__c</fullName>
    <description>Formula field used in email templates to Product Manager to indicate whether the Service Agreement Change checkbox field is checked or not.</description>
    <formula>IF( Service_Agreement_Change__c , &quot;A Service Agreement/SLA change has been requested.  If a change is required to the CPQ printed agreement, please create a task and assign it to Angie Johnson. Select Sales Enablement - ICB as the task type and subject.  You may be able to handle this request via a PDF without involving Sales Enablement.&quot;, &quot;.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System Maintained Field: Used in email templates to indicate whether the Service Agreement Change checkbox field is checked or not.</inlineHelpText>
    <label>Service Agreement Change VerbiageProdMgr</label>
    <type>Text</type>
</CustomField>