main/default/objects/ICB__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <description>Formula field that displays the Service State from the Account.</description>
    <formula>Opportunity__r.Account.ShippingState</formula>
    <inlineHelpText>System Maintained Field: Service State for this Account, used to route the ICB to the right Offer Management employees.</inlineHelpText>
    <label>Service State</label>
    <type>Text</type>
</CustomField>