main/default/objects/ICB__c/fields/Solicited_RFP_RFI__c.field-meta.xml
<CustomField>
    <fullName>Solicited_RFP_RFI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you have an RFP or RFI in hand from the customer, please check this box</inlineHelpText>
    <label>Solicited - RFP / RFI</label>
    <type>Checkbox</type>
</CustomField>