main/default/objects/ICB__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description>Capture datetime the ICB was submitted for approval</description>
    <inlineHelpText>System Generated</inlineHelpText>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>