main/default/objects/ICB__c/fields/Technical_Update__c.field-meta.xml
<CustomField>
    <fullName>Technical_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox field</description>
    <inlineHelpText>Completed by the Product Manager if the approved ICB will need technical information relayed for service delivery that is not inherant in the product or current technical forms</inlineHelpText>
    <label>Technical Update</label>
    <type>Checkbox</type>
</CustomField>