main/default/objects/ICB__c/fields/Technical_Update_VerbiageAESE__c.field-meta.xml
<CustomField>
    <fullName>Technical_Update_VerbiageAESE__c</fullName>
    <description>Formula field used in email templates to the AE and Sales Engineer to display whether the Technical Update checkbox field is checked or not.</description>
    <formula>IF( Technical_Update__c, &quot;A Technical Update is required.  You will be updated within 48 hours.&quot;, &quot;.&quot;)</formula>
    <inlineHelpText>System Maintained Field:  Used in email templates to display whether the Technical Update checkbox field is checked or not.</inlineHelpText>
    <label>Technical Update Verbiage AESE</label>
    <type>Text</type>
</CustomField>