main/default/objects/ICB__c/fields/Vendor_Term__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Term__c</fullName>
    <description>used to capture the vendor term in the access management section</description>
    <label>Vendor Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>