main/default/objects/ICB__c/recordTypes/Approved_ICB.recordType-meta.xml
<RecordType>
    <fullName>Approved_ICB</fullName>
    <active>true</active>
    <description>Approved ICBs uses layout that prevents users from editing.</description>
    <label>Approved ICB</label>
</RecordType>