main/default/objects/ICB__c/validationRules/Additional_Conditions_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Conditions_Not_Required</fullName>
    <active>true</active>
    <description>If additional conditions are not required, &quot;Comments&quot;  field should be blank.</description>
    <errorConditionFormula>AND(TEXT(Additional_Conditions_Required__c)=&quot;No&quot;, 
NOT(ISBLANK(Comments__c)))</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>If Additional Conditions are not required, please clear the &quot;Comments&quot;  field.</errorMessage>
</ValidationRule>