main/default/objects/ICB__c/validationRules/CAPX_required_if_Wholesale.validationRule-meta.xml
<ValidationRule>
    <fullName>CAPX_required_if_Wholesale</fullName>
    <active>false</active>
    <errorConditionFormula>(CONTAINS(Account__r.Owners_Sales_Channel__c , &quot;Wholesale&quot;) &amp;&amp;
ISBLANK(TEXT(CAPX__c)))
||
(NOT(CONTAINS(Account__r.Owners_Sales_Channel__c , &quot;Wholesale&quot;))
&amp;&amp;
NOT(ISBLANK(TEXT(CAPX__c))))</errorConditionFormula>
    <errorDisplayField>CAPX__c</errorDisplayField>
    <errorMessage>CAPX field is required if Account Business Segment is Wholesale, and should be left blank if Account Business Segment is not Wholesale</errorMessage>
</ValidationRule>