main/default/objects/ICB__c/validationRules/ICB_Technical_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ICB_Technical_Reason_Required</fullName>
    <active>false</active>
    <description>The ICB Technical Reason field is required if the ICB Type = Technical.</description>
    <errorConditionFormula>ISPICKVAL(ICB_Type__c , &quot;Technical&quot;)    &amp;&amp;  ISBLANK( TEXT( ICB_Technical_Reason__c ) )</errorConditionFormula>
    <errorDisplayField>ICB_Technical_Reason__c</errorDisplayField>
    <errorMessage>The ICB Technical Reason is required.</errorMessage>
</ValidationRule>