main/default/objects/ICB__c/validationRules/ICB_Technical_Sales_Engineer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ICB_Technical_Sales_Engineer_Required</fullName>
    <active>false</active>
    <description>If the ICB Type is Technical then the Sales Engineer field is required.</description>
    <errorConditionFormula>TEXT( ICB_Type__c ) = &quot;Technical&quot;  &amp;&amp;  ISBLANK( Sales_Engineer__c )</errorConditionFormula>
    <errorDisplayField>Sales_Engineer__c</errorDisplayField>
    <errorMessage>The Sales Engineer field is required for Technical ICBs</errorMessage>
</ValidationRule>