main/default/objects/ICB__c/validationRules/Opportunty_or_Pricing_Agreement_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunty_or_Pricing_Agreement_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(OR(ISNULL( Opportunity__c )
         ,ISBLANK(Opportunity__c )
       )
      ,OR(ISNULL(Pricing_Agreement__c)
       ,ISBLANK(Pricing_Agreement__c)
       ) 
    )
   ,AND(NOT(ISNULL( Opportunity__c ))
       , NOT(ISBLANK(Opportunity__c ))
       ,NOT(ISNULL( Pricing_Agreement__c ))
       , NOT(ISBLANK(Pricing_Agreement__c))
   )
)</errorConditionFormula>
    <errorMessage>Neither both Opportunity and Pricing Agreement are empty nor both Opportunity and Pricing Agreement are provided.</errorMessage>
</ValidationRule>