main/default/objects/ICB__c/validationRules/Pricing_Term_Required_for_Off_Net_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricing_Term_Required_for_Off_Net_Quote</fullName>
    <active>false</active>
    <description>If Off-Net Quoting Required is checked, then Term is required</description>
    <errorConditionFormula>(Off_Net_Quoting_Required__c ) &amp;&amp; 
ISPICKVAL(Multi_Site_Costing__c, &quot;Single Site&quot;) &amp;&amp;
( ISBLANK( ASD_Pricing_Term__c ) )</errorConditionFormula>
    <errorDisplayField>ASD_Pricing_Term__c</errorDisplayField>
    <errorMessage>Pricing Term is required for Off-Net Costing Quotes</errorMessage>
</ValidationRule>