main/default/objects/ICB__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>false</active>
    <description>If this is a pricing type ICB, the Product field is required.</description>
    <errorConditionFormula>ISPICKVAL( ICB_Type__c , &quot;Pricing&quot;)  &amp;&amp;  ISBLANK( TEXT( Product__c ) )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>For a Pricing ICB, you must select a Product..</errorMessage>
</ValidationRule>