main/default/objects/ICB__c/validationRules/Type_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Required_Fields</fullName>
    <active>true</active>
    <description>&quot;Incentive Credit Type&quot; field selected value requires either &quot;NRC Credit Amount&quot; or &quot;Number of Months&quot; field have a value.</description>
    <errorConditionFormula>AND(TEXT(Incentive_Credit_Type__c)=&quot;One Time&quot;,
ISBLANK(NRC_Credit_Amount__c)) || 
AND(TEXT(Incentive_Credit_Type__c)=&quot;Free Month(s)&quot;,
 ISPICKVAL(Number_of_Months__c,&#39;&#39;))</errorConditionFormula>
    <errorMessage>Enter either the NRC Credit Amount or Number of Months for the Incentive Credit being offered.</errorMessage>
</ValidationRule>