main/default/objects/ICB__c/listViews/Allstream_UT_CO_MN_ND.listView-meta.xml
<ListView>
    <fullName>Allstream_UT_CO_MN_ND</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ICB_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Expected_MRR__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>ASD_Quote_Status__c</columns>
    <columns>Approval_Waiting_Since__c</columns>
    <columns>AccountExecutive__c</columns>
    <columns>AEs_Manager__c</columns>
    <columns>Service_State__c</columns>
    <columns>Account_Executive_Sales_Channel__c</columns>
    <columns>Solicited_RFP_RFI__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Offer Mgt Pending,Offer Mgt Pending Again,Off-Net Costing Pending</value>
    </filters>
    <filters>
        <field>Service_State__c</field>
        <operation>equals</operation>
        <value>UT,CO,MN,ND</value>
    </filters>
    <filters>
        <field>Account_Executive_Sales_Channel__c</field>
        <operation>notContain</operation>
        <value>Wholesale</value>
    </filters>
    <label>Allstream US - UT, CO, MN, ND</label>
    <sharedTo>
        <group>Offer_Management</group>
    </sharedTo>
</ListView>