main/default/objects/ICB__c/listViews/Ana_Shahi.listView-meta.xml
<ListView>
    <fullName>Ana_Shahi</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ICB_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Manager_2__c</columns>
    <columns>Expected_MRR__c</columns>
    <columns>Approval_Waiting_Since__c</columns>
    <columns>ASD_Quote_Status__c</columns>
    <columns>AccountExecutive__c</columns>
    <columns>AEs_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Product_Manager_2__c</field>
        <operation>equals</operation>
        <value>Ana Shahi</value>
    </filters>
    <label>Ana Shahi</label>
    <sharedTo>
        <group>Offer_Management</group>
    </sharedTo>
</ListView>