main/default/objects/ICB__c/listViews/KateKarow.listView-meta.xml
<ListView>
    <fullName>KateKarow</fullName>
    <booleanFilter>1 AND 2 AND 3 AND ((4 AND 5) OR (6 AND 7) OR 8 OR 9)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ICB_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Expected_MRR__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>ASD_Quote_Status__c</columns>
    <columns>Approval_Waiting_Since__c</columns>
    <columns>AccountExecutive__c</columns>
    <columns>AEs_Manager__c</columns>
    <columns>Service_State__c</columns>
    <columns>Account_Executive_Sales_Channel__c</columns>
    <columns>Solicited_RFP_RFI__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Offer Mgt Pending,Offer Mgt Pending Again,Off-Net Costing Pending</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notContain</operation>
        <value>Dark Fiber,Security Pro Services,SOC Services</value>
    </filters>
    <filters>
        <field>AEs_Manager__c</field>
        <operation>contains</operation>
        <value>Volkenant,Madison,Esposito,Cox,Barnes,Przymus</value>
    </filters>
    <filters>
        <field>Service_State__c</field>
        <operation>equals</operation>
        <value>MN,ND,CO,AZ,ID,WA,OR,CA,NV,MT,UT</value>
    </filters>
    <filters>
        <field>AEs_Manager__c</field>
        <operation>contains</operation>
        <value>Colby,Owen,Barnes,Abel,Griffiths,Kavanah,Loesche,Seals,Nelson,Burns</value>
    </filters>
    <filters>
        <field>Service_State__c</field>
        <operation>equals</operation>
        <value>MN,ND,CO</value>
    </filters>
    <filters>
        <field>Account_Executive_Sales_Channel__c</field>
        <operation>contains</operation>
        <value>Legacy</value>
    </filters>
    <filters>
        <field>AccountExecutive__c</field>
        <operation>equals</operation>
        <value>Scott Eastman,Chris O&#39;Connor,Sarah Watson,Jeff Anderson,Ken Owen</value>
    </filters>
    <label>KateKarow_MN/CO-Indirect-All Legacy</label>
    <sharedTo>
        <group>Offer_Management</group>
    </sharedTo>
</ListView>