main/default/objects/ICB__c/listViews/Service_Delivery_Activation_Team.listView-meta.xml
<ListView>
    <fullName>Service_Delivery_Activation_Team</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Expected_MRR__c</columns>
    <columns>ICB_Technical_Reason__c</columns>
    <columns>Approval_Waiting_Since__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Service Delivery - Activation Team Pending</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Service Delivery - Activation Team</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>