main/default/objects/ICB__c/listViews/Technical_ICB_SIP_ICB.listView-meta.xml
<ListView>
    <fullName>Technical_ICB_SIP_ICB</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical ICB - SIP</label>
    <queue>Technical_ICB_SIP</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>