main/default/objects/ICB__c/listViews/Technical_ICB_UC_ICB.listView-meta.xml
<ListView>
    <fullName>Technical_ICB_UC_ICB</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical ICB - UC</label>
    <queue>Technical_ICB_UC</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>