main/default/objects/ICB__c/listViews/Test_for_Release_2.listView-meta.xml
<ListView>
    <fullName>Test_for_Release_2</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Test for Release 2</label>
    <queue>Application_Operations_Center_ICB</queue>
</ListView>